# ad-blocking

./: .dockerignore  .env.example  .envrc.example  .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  Directory.Packages.props  Dockerfile.warp  LICENSE  PHASE2_IMPLEMENTATION.md  README.md  RUST_MODERNIZATION_SUMMARY.md  RUST_WORKSPACE.md  SECURITY.md  TEST_UPDATES_SUMMARY.md  WARP.md  build.ps1  build.sh  clippy.toml  deno.base.json  docker-compose.yml  index.html  launcher.ps1  launcher.sh  package-lock.json  package.json  test-build-scripts.ps1  test-modules.ps1
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: PR_PHASE2_BODY.md  copilot-instructions.md  labeler.yml
api/: README.md  openapi.json  openapi.yaml
benchmarks/: generate_synthetic_data.py  quick_benchmark.py  run_benchmarks.py
docs/: AGENTS.md  DENO_CONFIG.md  ENVIRONMENT_VARIABLES.md  ENVIRONMENT_VARIABLE_MIGRATION.md  HASH_VERIFICATION.md  LINEAR_DOCUMENTATION.md  README.md  RUNTIME_ENFORCEMENT.md  RUST_MODERNIZATION_SUMMARY.md  RUST_WORKSPACE.md  TYPESCRIPT_TYPE_DEFINITIONS.md  VALIDATION_ENFORCEMENT.md  WARP.md  WHY_VALIDATION_MATTERS.md  centralized-package-management.md  centralized-package-migration-summary.md  centralized-package-quick-reference.md  chunking-guide.md  compiler-comparison.md  configuration-reference.md  docker-guide.md  event-pipeline.md  getting-started.md  oop-refactoring-next-steps.md  release-guide.md
rules/: adguard_user_filter.txt
src/adguard-api-rust/: .gitattributes  .gitignore  .openapi-generator-ignore  Cargo.toml  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  README.md  regenerate-client.sh
src/adguard-api-rust/adguard-api-cli/: Cargo.toml
src/adguard-api-rust/adguard-api-cli/src/: config.rs  main.rs  menu.rs
src/adguard-api-rust/adguard-api-cli/src/commands/: account.rs  dedicated_ips.rs  devices.rs  dns_servers.rs  filter_lists.rs  mod.rs  query_log.rs  settings.rs  statistics.rs  user_rules.rs  web_services.rs
src/adguard-api-rust/adguard-api-lib/: Cargo.toml  README.md
src/adguard-api-rust/adguard-api-lib/.openapi-generator/: FILES
src/adguard-api-rust/adguard-api-lib/docs/: AccessTokenErrorResponse.md  AccessTokenResponse.md  AccountApi.md  AccountLimits.md  AuthenticationApi.md  BlockedWebService.md  BlockedWebServiceUpdate.md  BlockingMode.md  BlockingModeSettings.md  BlockingModeSettingsUpdate.md  CategoryQueriesStats.md  CategoryQueriesStatsList.md  CategoryType.md  CompanyDetailedQueriesStats.md  CompanyDetailedQueriesStatsList.md  CompanyQueriesStats.md  CompanyQueriesStatsList.md  ConnectDeviceType.md  CountryQueriesStats.md  CountryQueriesStatsList.md  DayOfWeek.md  DedicatedIpAddressesApi.md  DedicatedIps.md  DedicatedIpv4Address.md  Device.md  DeviceCreate.md  DeviceQueriesStats.md  DeviceQueriesStatsList.md  DeviceSettings.md  DeviceSettingsUpdate.md  DeviceUpdate.md  DevicesApi.md  DnsAddresses.md  DnsProtoResponseType.md  DnsProtoType.md  DnsServer.md  DnsServerAccessSettings.md  DnsServerAccessSettingsUpdate.md  DnsServerCreate.md  DnsServerSettings.md  (+46 more)
src/adguard-api-rust/adguard-api-lib/src/apis/: account_api.rs  authentication_api.rs  configuration.rs  dedicated_ip_addresses_api.rs  devices_api.rs  dns_servers_api.rs  filter_lists_api.rs  mod.rs  query_log_api.rs  statistics_api.rs  web_services_api.rs
src/adguard-api-rust/adguard-api-lib/src/models/: access_token_error_response.rs  access_token_response.rs  account_limits.rs  blocked_web_service.rs  blocked_web_service_update.rs  blocking_mode.rs  blocking_mode_settings.rs  blocking_mode_settings_update.rs  category_queries_stats.rs  category_queries_stats_list.rs  category_type.rs  company_detailed_queries_stats.rs  company_detailed_queries_stats_list.rs  company_queries_stats.rs  company_queries_stats_list.rs  connect_device_type.rs  country_queries_stats.rs  country_queries_stats_list.rs  day_of_week.rs  dedicated_ips.rs  dedicated_ipv4_address.rs  device.rs  device_create.rs  device_queries_stats.rs  device_queries_stats_list.rs  device_settings.rs  device_settings_update.rs  device_update.rs  dns_addresses.rs  dns_proto_response_type.rs  dns_proto_type.rs  dns_server.rs  dns_server_access_settings.rs  dns_server_access_settings_update.rs  dns_server_create.rs  dns_server_settings.rs  dns_server_settings_update.rs  dns_server_update.rs  domain_queries_stats.rs  domain_queries_stats_list.rs  (+38 more)
src/adguard-api-rust/adguard-api-lib/tests/: integration_test.rs
src/adguard-validation/: .gitignore  Cargo.toml  README.md
src/adguard-validation/adguard-validation-cli/: Cargo.toml
src/adguard-validation/adguard-validation-cli/src/: main.rs
src/adguard-validation/adguard-validation-core/: Cargo.toml
src/adguard-validation/adguard-validation-core/src/: archive.rs  config.rs  error.rs  file_conflict.rs  hash.rs  lib.rs  runtime_enforcement.rs  syntax.rs  url_security.rs  validator.rs
src/adguard-validation/adguard-validation-core/tests/: integration_tests.rs
src/rules-compiler-python/: README.md  pyproject.toml
src/rules-compiler-python/rules_compiler/: __init__.py  chunking.py  cli.py  compiler.py  config.py  errors.py  events.py  interactive.py
src/rules-compiler-python/rules_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rules-compiler-python/tests/: __init__.py  test_async.py  test_chunking.py  test_cli.py  test_compiler.py  test_config.py  test_errors.py
src/rules-compiler-rust/: Cargo.toml  README.md
src/rules-compiler-rust/examples/: hash_audit_handler.rs
src/rules-compiler-rust/src/: chunking.rs  compiler.rs  config.rs  error.rs  events.rs  lib.rs  main.rs
src/rules-compiler-rust/tests/: config_discovery_tests.rs
src/rules-compiler-typescript/frontend-rust/: Cargo.toml
src/rules-compiler-typescript/frontend-rust/src/: compiler.rs  config.rs  error.rs  lib.rs  main.rs
tools/: Migrate-To-NewStructure.ps1  README.md  check-validation-compliance.sh  test-build-scripts.sh  test-modules.ps1
www/: index.html
(+1369 files in other folders)
