[workspace]
resolver = "2"
members = [
    "src/adguard-validation/adguard-validation-core",
    "src/adguard-validation/adguard-validation-cli",
    "src/adguard-api-rust/adguard-api-lib",
    "src/adguard-api-rust/adguard-api-cli",
    "src/rules-compiler-rust",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["jaypatrick"]
license = "GPL-3.0"
repository = "https://github.com/jaypatrick/ad-blocking"
rust-version = "1.83"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP clients
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_repr = "0.1"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Hashing and cryptography
sha2 = "0.10"
hex = "0.4"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# File system utilities
walkdir = "2.5"
dirs = "5.0"

# Regex
regex = "1.11"

# Cross-platform utilities
which = "7.0"

# Runtime version detection
rustc_version_runtime = "0.3"

# WASM support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Development dependencies
[workspace.dependencies.tempfile]
version = "3.14"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

# Workspace-wide lints
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
