[workspace]
members = ["adguard-validation-core", "adguard-validation-cli"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["jaypatrick"]
license = "GPL-3.0"
repository = "https://github.com/jaypatrick/ad-blocking"
rust-version = "1.75"

[workspace.dependencies]
# Validation core library
adguard-validation-core = { path = "adguard-validation-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
hex = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# URL parsing
url = "2.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# File system
walkdir = "2.5"

# Regex
regex = "1.11"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.release.package.adguard-validation-core]
# Extra optimization for core library
opt-level = 3
codegen-units = 1
