[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rules-compiler"
version = "2.0.0"
description = "Python API for compiling AdGuard filter rules using hostlist-compiler"
readme = "README.md"
license = {text = "GPLv3"}
authors = [
    {name = "jaypatrick"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: System :: Networking :: Firewalls",
    "Typing :: Typed",
]
keywords = ["adguard", "filter", "adblock", "hostlist", "compiler", "dns", "privacy"]
dependencies = [
    "pyyaml>=6.0.2",
    "tomli>=2.2.1; python_version < '3.11'",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.3",
    "mypy>=1.15.0",
    "ruff>=0.9.4",
    "types-PyYAML>=6.0.12.20250114",
]
toml-export = [
    "tomlkit>=0.14.0",
]
interactive = [
    "questionary>=2.1.0",
]
all = [
    "rules-compiler[dev,toml-export,interactive]",
]

[project.scripts]
rules-compiler = "rules_compiler.cli:main"

[project.urls]
Homepage = "https://github.com/jaypatrick/ad-blocking"
Repository = "https://github.com/jaypatrick/ad-blocking"
Issues = "https://github.com/jaypatrick/ad-blocking/issues"
Documentation = "https://github.com/jaypatrick/ad-blocking/tree/main/src/rules-compiler-python"
Changelog = "https://github.com/jaypatrick/ad-blocking/releases"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["rules_compiler"]

[tool.coverage.run]
source = ["rules_compiler"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
