[package]
name = "rules-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust API for compiling AdGuard filter rules using hostlist-compiler"
keywords = ["adguard", "filter", "adblock", "hostlist", "compiler"]
categories = ["command-line-utilities", "web-programming"]
rust-version.workspace = true

[lib]
name = "rules_compiler"
path = "src/lib.rs"

[[bin]]
name = "rules-compiler"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# CLI
clap = { workspace = true }
dialoguer = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Cross-platform
which = { workspace = true }

# Time
chrono = { workspace = true }

# UUID for temp files
uuid = { workspace = true }

# Rust version at runtime
rustc_version_runtime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
