[package]
name = "rules-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust API for compiling AdGuard filter rules using hostlist-compiler"
keywords = ["adguard", "filter", "adblock", "hostlist", "compiler"]
categories = ["command-line-utilities", "web-programming"]
rust-version.workspace = true

[lib]
name = "rules_compiler"
path = "src/lib.rs"

[[bin]]
name = "rules-compiler"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["fs", "process", "io-util"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# CLI
clap = { workspace = true }
dialoguer = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Cross-platform
which = { workspace = true }

# Async utilities
futures = { workspace = true }

# Logging/tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID for temp files
uuid = { workspace = true }

# Random number generation (for benchmarks)
rand = "0.9"

# Rust version at runtime
rustc_version_runtime = { workspace = true }

# Platform-specific file locking (Unix only - Windows uses open file handles)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
