[package]
name = "adguard-api-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI client for AdGuard DNS API"

[[bin]]
name = "adguard-api-cli"
path = "src/main.rs"

[dependencies]
adguard-api-lib = { path = "../adguard-api-lib" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
