[package]
name = "adguard-api-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust API client library for AdGuard DNS API"

[dependencies]
serde.workspace = true
serde_json.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
tokio.workspace = true
serde_repr = "0.1"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = []
