[package]
name = "adguard-validation-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core validation library for AdGuard filter compilation with hash verification, URL security, and syntax validation"
keywords = ["adguard", "validation", "security", "filter", "adblock"]
categories = ["web-programming", "cryptography", "parser-implementations"]

[lib]
name = "adguard_validation"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]  # Support both native and FFI

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
url = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["Request", "Response", "Headers"] }

[dev-dependencies]
tempfile = { workspace = true }
