[package]
name = "rules-compiler-frontend"
version = "1.0.0"
edition = "2021"
description = "Rust frontend CLI for the TypeScript rules compiler"
authors = ["jaypatrick"]
license = "MIT"
repository = "https://github.com/jaypatrick/ad-blocking"
keywords = ["adguard", "filter", "compiler", "ad-blocking", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
chrono = "0.4"
thiserror = "1.0"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
